--- a/index2.html
+++ b/index2.html
@@ -2,9 +2,152 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
     <title>Title</title>
 </head>
 <body>
+<div class="container">
+    <p id=" id">
+       1p
+    </p>
+    <p id="btat">
+        osaid
+    </p>
+</div>
+<section class="header">
+    <div>
+        <img src="logo.png" alt="logo">
+    </div>
+    <div class="group-link">
+        <a href="#" class="link but">HOME</a>
+        <a href="#" class="link but">PAGES</a>
+        <a href="#" class="link but">WORKS</a>
+        <a href="#" class="link but">SHOP</a>
+        <a href="#" class="link but">PLOG</a>
+        <a href="#" class="link but">CONTACT</a>
+        <button><a href="#" class="but">BUY NOW</a></button>
+    </div>
+</section>
+<section class="navbar">
+    <div>
+        <div class="part-1">
+            <button class="but-try">
+                try 15 days free trial
+            </button>
+            <h2>
+                Powerful SEO & Business Services
+            </h2>
+            <p class="pgf">
+                It's crafted with the latest trend of design & coded with all modern approaches.
+            </p>
+            <button class="but-see">
+                SEE FEATURES
+            </button>
+            <div class="sircle">
+                <div class="content">
+                    <p><</p>
+                </div>
+                <div class="content">
+                    <p>></p>
+                </div>
+            </div>
+        </div>
+        <div class="part-1" style="display:none">
+            <button class="but-try">
+                try 15 days free trial
+            </button>
+            <h2>
+                Powerful SEO & Business Services
+            </h2>
+            <p class="pgf">
+                It's crafted with the latest trend of design &&&&&&& coded with all modern approaches.
+            </p>
+            <button class="but-see">
+                SEE FEATURES
+            </button>
+            <div class="sircle">
+                <div class="content">
+                    <p><</p>
+                </div>
+                <div class="content">
+                    <p>></p>
+                </div>
+            </div>
+        </div>
+        <div class="part-1" style="display:none">
+            <button class="but-try">
+                try 15 days free trial
+            </button>
+            <h2>
+                Powerful SEO & Business Services
+            </h2>
+            <p class="pgf">
+                It's crafted with the latest trend of design &******* coded with all modern approaches.
+            </p>
+            <button class="but-see">
+                SEE FEATURES
+            </button>
+            <div class="sircle">
+                <div class="content">
+                    <p><</p>
+                </div>
+                <div class="content">
+                    <p>></p>
+                </div>
+            </div>
+        </div>
+        <div class="part-1" style="display:none">
+            <button class="but-try">
+                try 15 days free trial
+            </button>
+            <h2>
+                Powerful SEO & Business Services
+            </h2>
+            <p class="pgf">
+                It's crafted with the latest trend of design &####### coded with all modern approaches.
+            </p>
+            <button class="but-see">
+                SEE FEATURES
+            </button>
+            <div class="sircle">
+                <div class="content">
+                    <p><</p>
+                </div>
+                <div class="content">
+                    <p>></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="part-img">
+       <img src="9.jpg" alt="logo">
+    </div>
+</section>
+<section class="card-section">
+    <div class="container-os">
+        <div class="group-of-cards">
+            <div class="cards">
+                <i class="fas fa-robot"></i>
+                <h1>bls bla </h1>
+                <p>dhiy hpsjf</p>
+            </div>
+            <div class="cards">
+                <i class="fas fa-robot"></i>
+                <h1>bls bla </h1>
+                <p>dhiy hpsjf</p>
+            </div>
+            <div class="cards">
+                <i class="fas fa-robot"></i>
+                <h1>bls bla </h1>
+                <p>dhiy hpsjf</p>
+            </div>
+            </div>
 
+    </div>
+</section>
 </body>
+<script src="script.js"></script>
+
 </html>
